# team13-aws-hackathon

./: .env  .env.staging  .gitignore  README.md  demo_website.html  lambda_function.py  main.py  pyproject.toml  requirements.txt  task-definition.json  배포가이드.md  테스트가이드.md  프로젝트_최초_아이디어.md
.amazonq/prompts/: common-troubleshooting.md  dev-a-infrastructure.md  dev-b-backend.md  dev-guidelines.md
.github/: CICD_SETUP.md
.github/workflows/: deploy.yml
analytics/: dynamodb_client.py  models.py  serializers.py  urls.py  views.py
dashboard/: urls.py  views.py
dashboard/templates/: base.html
demo/: test_shop.html  데모시나리오.md
docs/: 00_세부기획문서.md  01_아키텍처_설계.md  02_개발스택.md  03_데이터베이스_설계.md  04_개발로드맵.md  05_운영가이드.md  API_명세서.md  CICD_작업계획.md  README.md  비즈니스_로직_문서.md  사용자_시나리오.md  시스템_아키텍처_다이어그램.md
docs/backend/: BACKEND_SPEC.md  BACKEND_TASKS.md  DEPLOYMENT_INFO.md
frontend/: test-site.html
infrastructure/: README.md  deploy.sh  lambda_function.py  load_test.py  main.tf  outputs.tf  phase8-main.tf  phase8-outputs.tf  phase8-variables.tf  rollback.sh  s3.tf  test_api.py  variables.tf
lambda_dummy/: dummy.py
liveinsight/: settings.py  urls.py
optimization/: cache_config.py  db_tuning.tf
prompts/: 개발자A_프롬프트.md  개발자B_프롬프트.md  공통_프롬프트.md  프롬프트_사용법.md
scripts/: README.md  blue-green-deploy.sh  build.sh  deploy-all.sh  deploy-clean.sh  deploy-js-sdk.sh  deploy-phase8.sh  deploy-phase9.sh  deploy.sh  dev.sh  fix-css.sh  rollback.sh  run-tests.sh  setup-cicd.sh  test-phase8.sh  test-phase9.sh  test-static-files.sh  test.sh  upload-static.sh  verify-deployment.sh
src/: .dockerignore  Dockerfile  __init__.py  config.py  docker-compose.yml  entrypoint.sh  lambda_function.py  main.py  manage.py  requirements.txt
static/: integration-guide.md  test.html
terraform/: api_gateway.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  monitoring.tf  outputs.tf  s3.tf  variables.tf
tests/: README.md  test_api_simple.py
(+119 files in other folders)
