[project]
name = "liveinsight-backend"
version = "0.1.0"
description = "LiveInsight 실시간 웹 분석 서비스 백엔드 (24시간 해커톤 MVP)"
authors = [
    {name = "Team13", email = "team13@example.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "mangum>=0.17.0",
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.24.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "httpx>=0.25.0",
    "moto>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"